<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <TextView
        fontPath="@string/font_quicksand_medium"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/padding_5"
        android:textSize="@dimen/size_20"
        android:text="Waiting..." />

    <TextView
        fontPath="@string/font_quicksand_regular"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/size_16"
        android:text="@string/request_pending" />


</RelativeLayout>
