<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingPrefix">


    <include
        android:id="@+id/toolbar_terms"
        layout="@layout/toolbar" />


    <LinearLayout
        android:id="@+id/headding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_terms"
        android:background="@drawable/gray_border_bg"
        android:orientation="vertical">


        <TextView
            fontPath="@string/font_quicksand_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:padding="@dimen/padding_12"
            android:text="@string/technology"
            android:textColor="@color/black"
            android:textSize="@dimen/size_15" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/headding" />


    <WebView
        android:id="@+id/webView_terms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/checkbox_lay"
        android:layout_below="@+id/progressBar1" />


    <LinearLayout
        android:id="@+id/checkbox_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/gray_border_bg"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox"
                fontPath="@string/font_quicksand_regular"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_7"
                android:button="@drawable/custom_checkbox"
                android:padding="@dimen/padding_10"
                android:text="@string/condition"
                android:textSize="@dimen/size_16"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtSubmitDetail"
            fontPath="@string/font_josefinsans_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/blue_selector_btn"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:text="@string/text_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18" />

    </LinearLayout>


</RelativeLayout>
