<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_cancel"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/tv_move_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_img"
            android:textSize="18sp"
            fontPath="@string/font_quicksand_regular" />

        <RelativeLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_move_message"
            android:background="@color/light_gray" >
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_take_photo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/line1"
            android:gravity="center"
            android:text="@string/take_photo"
            android:textColor="@color/black"
            android:textSize="18sp"
            fontPath="@string/font_quicksand_regular" />

        <RelativeLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_take_photo"
            android:background="@color/light_gray" >
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_photo_library"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/line2"
            android:gravity="center"
            android:text="@string/photo_lib"
            android:textColor="@color/black"
            android:textSize="18sp"
            fontPath="@string/font_quicksand_regular"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            fontPath="@string/font_quicksand_regular" />
    </RelativeLayout>

</RelativeLayout>