<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingPrefix">


    <include
        android:id="@+id/toolbar_terms"
        layout="@layout/toolbar" />


    <LinearLayout
        android:id="@+id/headding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_terms"
        android:background="@drawable/gray_border_bg"
        android:orientation="vertical">


        <TextView
            fontPath="@string/font_quicksand_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:padding="12dp"
            android:text="@string/technology"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_below="@+id/headding"
        android:progressBackgroundTint="@color/colorPrimary" />


    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/checkbox_lay"
        android:layout_below="@+id/progressBar1" />


    <LinearLayout
        android:id="@+id/checkbox_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/gray_border_bg"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox"
                fontPath="@string/font_quicksand_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:button="@drawable/custom_checkbox"
                android:padding="10dp"
                android:text="@string/condition"
                android:textSize="16sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtSubmitDetail"
            fontPath="@string/font_josefinsans_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/blue_bottom_btn_selector"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/text_continue"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
